# Baremetal_test

./: README.md
baremetal_test/: CMakeLists.txt  Makefile  bench.cpp  dynamic_test.py  main.cpp  multithread_test.cpp  my_test.py  utils.py
baremetal_test/data/: baseline.csv  generated_sift_learn.tags  multithreaded.csv  result.csv  sift_learn.tags  tags.npy
baremetal_test/data/TestIndex/: TEST.tags
docs/python/dev/: diskannpy.html
docs/python/dev/diskannpy/: defaults.html
include/: index.h
src/: CMakeLists.txt  ann_exception.cpp
